# ChangeLog for net-misc/openssh
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.207 2006/10/04 03:12:50 pebenito Exp $

*openssh-4.4_p1-r3 (04 Oct 2006)

  04 Oct 2006; Chris PeBenito <pebenito@gentoo.org>
  +files/openssh-4.4p1-selinux-ac.diff, +openssh-4.4_p1-r3.ebuild:
  Fix configure to properly detect SELinux functions.

*openssh-4.4_p1-r2 (02 Oct 2006)

  02 Oct 2006; Mike Frysinger <vapier@gentoo.org> +openssh-4.4_p1-r2.ebuild:
  Add support for new X509.

  02 Oct 2006; Andrea Barisani <lcars@gentoo.org>
  files/digest-openssh-4.4_p1-r1, Manifest:
  Fixing digest wrt bug #149571

  30 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  openssh-4.4_p1-r1.ebuild:
  Make sure pam is the latest eclass called.

  29 Sep 2006; Markus Rothe <corsair@gentoo.org> openssh-4.3_p2-r5.ebuild:
  Stable on ppc64

*openssh-4.4_p1-r1 (29 Sep 2006)

  29 Sep 2006; Andrea Barisani <lcars@gentoo.org> +openssh-4.4_p1-r1.ebuild:
  Revision bump for new ldap patch.

*openssh-4.4_p1 (28 Sep 2006)

  28 Sep 2006; Mike Frysinger <vapier@gentoo.org> +openssh-4.4_p1.ebuild:
  Version bump.

  27 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org>
  openssh-4.3_p2-r5.ebuild:
  Stable on alpha wrt bug #148228

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  openssh-4.3_p2-r5.ebuild:
  Stable on hppa wrt security #148228

  26 Sep 2006; Simon Stelling <blubb@gentoo.org> openssh-4.3_p2-r5.ebuild:
  stable on amd64; bug 148228

  26 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  openssh-4.3_p2-r5.ebuild:
  ppc stable, bug #148228

  25 Sep 2006; Jason Wever <weeve@gentoo.org> openssh-4.3_p2-r5.ebuild:
  Stable on SPARC wrt security bug #148228.

  25 Sep 2006; Paul Varner <fuzzyray@gentoo.org> openssh-4.3_p2-r5.ebuild:
  Stable on x86. Bug #148228

*openssh-4.3_p2-r5 (25 Sep 2006)

  25 Sep 2006; Tavis Ormandy <taviso@gentoo.org> +openssh-4.3_p2-r5.ebuild,