@@ -1,6 +1,9 @@
 MD5 132f5ae282de4ff822a95591720da8fd openssh-4.4p1+x509-5.5.1.diff.gz 137417
 RMD160 34cf39583e8c01bb055671a540c7463f45134960 openssh-4.4p1+x509-5.5.1.diff.gz 137417
 SHA256 bb2936a0c5ffff2f5db41a7da83390a189dc4590f9a95325c252d81b9b693ded openssh-4.4p1+x509-5.5.1.diff.gz 137417
+MD5 3a5545354e5c55eb1250b5be434032dd openssh-4.4p1-hpn12v11-gentoo.patch.bz2 14675
+RMD160 340aaed711bb58a39fe36ebbd47ba1f1e7e304c1 openssh-4.4p1-hpn12v11-gentoo.patch.bz2 14675
+SHA256 dfa55376bbd11f6688cc0f228f8dff1175ab985bf80267630bbe38f0c9be261d openssh-4.4p1-hpn12v11-gentoo.patch.bz2 14675
 MD5 793a709a8de695c22f523024d7e9bf07 openssh-4.4p1.tar.gz 1044334
 RMD160 13eb79a54e95037fff1902b659319df1c5f79bbc openssh-4.4p1.tar.gz 1044334
 SHA256 0252474af4009129cde6a2df2893fb1ac24316436758796f6adc043ac73b35ac openssh-4.4p1.tar.gz 1044334
