@@ -1,6 +1,17 @@
 # ChangeLog for net-misc/openssh
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.207 2006/10/04 03:12:50 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.210 2006/10/17 14:37:18 uberlord Exp $
+
+  17 Oct 2006; Roy Marples <uberlord@gentoo.org> openssh-4.4_p1-r4.ebuild:
+  Added ~sparc-fbsd keyword.
+
+  14 Oct 2006; Roy Marples <uberlord@gentoo.org> files/sshd.rc6:
+  Init script now interacts fully with start-stop-daemon.
+
+*openssh-4.4_p1-r4 (13 Oct 2006)
+
+  13 Oct 2006; Mike Frysinger <vapier@gentoo.org> +openssh-4.4_p1-r4.ebuild:
+  Add updated hpn support.
 
 *openssh-4.4_p1-r3 (04 Oct 2006)
 
